youker-assistant (3.0.2-0kylin6k58~rc2) v101; urgency=medium

  [hebing]
   * Bug  :
   * Task :
   * Other:
      - 纠正麒麟助手内存信息获取的异常判断代码

 -- hebing <hebing@kylinos.cn>  Tue, 27 Apr 2021 15:50:11 +0800

youker-assistant (3.0.2-0kylin6k58~rc1) v101; urgency=medium

  [tang guang]
   * Bug  :
      - 英文模式下，文字未显示全(bug#44026)
      - 麒麟助手，电脑清理，清理后缓存显示不正确(bug#44183)
   * Task :
   * Other:
      - 解决麒麟助手部分机器内存信息存在内容分隔符
      - 解决部分光驱信息不显示

 -- tangguang <tangguang@kylinos.cn>  Mon, 26 Apr 2021 20:47:45 +0800

youker-assistant (3.0.2-0kylin6k57~rc1) v101; urgency=medium

  [tang guang]
   * Bug  :
   * Task :
   * Other: 
     - 根据设计稿再次重新调整cpu自定义调频界面
     - 修改帮助文档的应用名为工具箱       

 -- tangguang <tangguang@kylinos.cn>  Sun, 25 Apr 2021 14:50:22 +0800

youker-assistant (3.0.2-0kylin6k56~rc2) v101; urgency=medium

  [tang guang]
   * 补充修改desktop文件,增加StartupNotify=true

 -- hebing <hebing@kylinos.cn>  Thu, 22 Apr 2021 14:42:33 +0800

youker-assistant (3.0.2-0kylin6k56~rc1) v101; urgency=medium

  [tang guang]
   * BUG : bug#44096/bug#39597
   * Other : 重构CPU自定义调频

 -- hebing <hebing@kylinos.cn>  Wed, 21 Apr 2021 19:58:25 +0800

youker-assistant (3.0.2-0kylin6k55~rc3) v101; urgency=medium

  [tang guang]
   * 修改帮助文档的截图
   * 清理界面子窗口使用窗管圆角
 
 -- hebing <hebing@kylinos.cn>  Tue, 20 Apr 2021 10:16:39 +0800

youker-assistant (3.0.2-0kylin6k55~rc2) v101; urgency=medium

  [tang guang]
   * 补充修改desktop文件中Kylin Assistant 为 ToolKit

 -- hebing <hebing@kylinos.cn>  Tue, 20 Apr 2021 10:12:39 +0800

youker-assistant (3.0.2-0kylin6k55~rc1) v101; urgency=medium

  [tang guang]
   * 修改Kylin Assistant 为 ToolKit
   * 修复自测问题：打开关于界面再关闭界面无法点击
   * 引入日志框架

 -- hebing <hebing@kylinos.cn>  Mon, 19 Apr 2021 16:04:25 +0800

youker-assistant (3.0.2-0kylin6k54~rc1) v101; urgency=medium

  [tang guang]
   * 添加光驱信息显示/翻译

 -- hebing <hebing@kylinos.cn>  Fri, 16 Apr 2021 20:34:08 +0800

youker-assistant (3.0.2-0kylin6k53~rc1) v101; urgency=medium

  [tang guang]
   * 添加外置硬盘和U盘 ，显示硬盘和U盘的产商和型号